# jc2mouse

./: .gitignore  README.md  pyproject.toml
patches/bluez/: force-medium-security.patch
scripts/: build_bluez.sh  jc2-session.sh  setup.sh
src/jc2mouse/: cli.py  driver.py  mapper.py
systemd/: jc2-bluetooth.service
